; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-seccomp.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-seccomp.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_DEBUG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %6 = load i32, i32* @LOG_DEBUG, align 4
  %7 = call i32 @test_setup_logging(i32 %6)
  %8 = call i32 (...) @test_seccomp_arch_to_string()
  %9 = call i32 (...) @test_architecture_table()
  %10 = call i32 (...) @test_syscall_filter_set_find()
  %11 = call i32 (...) @test_filter_sets()
  %12 = call i32 (...) @test_filter_sets_ordered()
  %13 = call i32 (...) @test_restrict_namespace()
  %14 = call i32 (...) @test_protect_sysctl()
  %15 = call i32 (...) @test_protect_syslog()
  %16 = call i32 (...) @test_restrict_address_families()
  %17 = call i32 (...) @test_restrict_realtime()
  %18 = call i32 (...) @test_memory_deny_write_execute_mmap()
  %19 = call i32 (...) @test_memory_deny_write_execute_shmat()
  %20 = call i32 (...) @test_restrict_archs()
  %21 = call i32 (...) @test_load_syscall_filter_set_raw()
  %22 = call i32 (...) @test_lock_personality()
  %23 = call i32 (...) @test_restrict_suid_sgid()
  ret i32 0
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i32 @test_seccomp_arch_to_string(...) #1

declare dso_local i32 @test_architecture_table(...) #1

declare dso_local i32 @test_syscall_filter_set_find(...) #1

declare dso_local i32 @test_filter_sets(...) #1

declare dso_local i32 @test_filter_sets_ordered(...) #1

declare dso_local i32 @test_restrict_namespace(...) #1

declare dso_local i32 @test_protect_sysctl(...) #1

declare dso_local i32 @test_protect_syslog(...) #1

declare dso_local i32 @test_restrict_address_families(...) #1

declare dso_local i32 @test_restrict_realtime(...) #1

declare dso_local i32 @test_memory_deny_write_execute_mmap(...) #1

declare dso_local i32 @test_memory_deny_write_execute_shmat(...) #1

declare dso_local i32 @test_restrict_archs(...) #1

declare dso_local i32 @test_load_syscall_filter_set_raw(...) #1

declare dso_local i32 @test_lock_personality(...) #1

declare dso_local i32 @test_restrict_suid_sgid(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
